cookbooks/olympus/hera/infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "hera"
  labels:
    app.kubernetes.io/instance: "hera"
    app.kubernetes.io/name: "hera"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "hera"
      app.kubernetes.io/instance: "hera"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "hera"
        app.kubernetes.io/instance: "hera"
    spec:
      containers:
        - name: "hera"
          image: "registry.digitalocean.com/zeus-fyi/hera:latest"
          volumeMounts:
            - mountPath: "/scripts"
              name: "cm-hera"
          imagePullPolicy: Always
          command: [ "/bin/sh" ]
          args: [ "-c","/scripts/start.sh" ]
          ports:
            - name: "http"
              containerPort: 9008
              protocol: "TCP"
          livenessProbe:
            httpGet:
              path: "/health"
              port: "http"
            failureThreshold: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: "/health"
              port: "http"
            failureThreshold: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            {}
      volumes:
        - name: cm-hera
          configMap:
            name: cm-hera
            defaultMode: 0744
      nodeSelector:
        {}
      affinity:
        {}
      tolerations:
        []
