cookbooks/olympus/hera/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "hera"
  namespace: "hera"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: hera-tls
      hosts:
        - hera.zeus.fyi
  rules:
    - host: hera.zeus.fyi
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: hera
                port:
                  number: 80
